last commit before doing media query

--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
                     <div class="course-detail">
 
                         <div class="course-title">
-                            <a href="#">Powerpoint 2020 <br>
-                                Master Powerpoint Course
+                            <a href="#">Powerpoint 2020 Master <br>
+                                Powerpoint Cours
                             </a>
 
                         </div>
