course spelling corrected

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
                         <div class="course-title">
                             <a href="#">Powerpoint 2020 Master <br>
-                                Powerpoint Cours
+                                Powerpoint Course
                             </a>
 
                         </div>
