Responsive for mobile devices

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
     <section class="second-section">
         <div class="section-title second-section-title">
-            <p>Lates Course</p>
+            <p>Latest Courses</p>
         </div>
         <div class="latest-courses">
             <div class="course-box">
