--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                 </div>
                 <div class="blog-info">
-                    <a href="#" class="blog-title blog-title-2">UI cheat sheet: <br>
+                    <a href="#" class="blog-title blog-title-2">UI cheat sheet:
                         list vs grids</a>
                     <a href="#" class="blog-author-info">By <span class="author-name">Tess Gadd</span></a>
                 </div>
